crates/mold_format/tests/snapshots/snapshots__jsonb_operators.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
SELECT data->'name'->>'first',
data#>'{address,city}' 
FROM users
WHERE data @> '{"active": true}'
