crates/mold_format/tests/snapshots/snapshots__select_with_multiple_joins.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
SELECT r.last_name
  FROM riders AS r
       INNER JOIN bikes AS b
       ON r.bike_vin_num = b.vin_num
          AND b.engine_tally > 2

       INNER JOIN crew AS c
       ON r.crew_chief_last_name = c.last_name
          AND c.chief = 'Y'
