crates/mold_format/tests/snapshots/snapshots__simple_select_compact.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
SELECT id,
name
FROM users
WHERE active = true
