crates/mold_format/tests/snapshots/snapshots__subquery.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
SELECT *
  FROM users
 WHERE id IN ( SELECT user_id FROM orders WHERE total > 100)
