crates/mold_format/tests/snapshots/snapshots__trailing_comma_style.snap
---
source: crates/mold_format/tests/snapshots.rs
expression: formatted
---
SELECT id, name, email
  FROM users
